[package]
name = "actix-web-juniper-trying"
version = "0.1.0"
authors = ["Roman Frołow <rofrol@gmail.com>"]

[dependencies]
actix = "0.5"
actix-web = "0.4"
dotenv = "0.9.0"
futures = "0.1.17"
juniper = "0.9.2"
lazy_static = "1.0.0"
serde = "1.0.27"
serde_json = "1.0.10"
slog = "2.1.1"
slog-term = "2.1.1"
